--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <button class="boton-acordes"></button>
     <button class="boton-particulas"></button>
     
-    <script src="sketch.js"></script>
-  </body>
+        <script src="sketch.js"></script>   
+<!-- Script del menú editable -->
+<script src="menu.js"></script>
+ </body>
 </html>
