--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <head><button id="open-menu-btn">⚙️ Configuración</button>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/addons/p5.sound.min.js"></script>
       <link rel="stylesheet" type="text/css" href="menu_custom.css">
 <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
   </head>
-  <body>
+  <body> <button id="open-menu-btn">⚙️ Configuración</button>
     <main>
     </main>
 
