--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body> <button id="open-menu-btn">⚙️ Configuración</button>
     <main>
     </main>
-
+    <button id="toggle-drum-btn">Drum Loop</button>
     <button class="boton-grabar"></button>
     <button class="boton-back"></button>
     <button class="boton-acordes"></button>
