--- a/index.html
+++ b/index.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-<script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/addons/p5.sound.min.js"></script>
-      <link rel="stylesheet" type="text/css" href="menu_custom.css">
-<link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-  </head>
-  <body> <button id="open-menu-btn">⚙️ Configuración</button>
-    <main>
-    </main>
-    <button id="toggle-drum-btn">Drum Loop</button>
-    <button class="boton-grabar"></button>
-    <button class="boton-back"></button>
-    <button class="boton-acordes"></button>
-    <button class="boton-particulas"></button>
-    
-        <script src="sketch.js"></script>   
-<!-- Script del menú editable -->
-<script src="menu.js"></script>
- </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- p5.js -->
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/addons/p5.sound.min.js"></script>
+
+  <!-- Estilos -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="menu_custom.css">
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      touch-action: none;
+      width: 100%;
+      height: 100%;
+    }
+
+    main {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+</head>
+<body>
+  
+  <!-- Botón para abrir menú -->
+  <button id="open-menu-btn">⚙️ Configuración</button>
+  
+  <!-- Botones funcionales -->
+  <button id="toggle-drum-btn">Drum Loop</button>
+  <button class="boton-grabar"></button>
+  <button class="boton-back"></button>
+  <button class="boton-acordes"></button>
+  <button class="boton-particulas"></button>
+
+  <!-- Sketch -->
+  <script src="sketch.js"></script>
+
+  <!-- Script del menú editable -->
+  <script src="menu.js"></script>
+
+</body>
 </html>
